--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         <li><a href="https://cicwi.github.io/SliceRecon">SliceRecon</a>. A library for on-demand tomographic reconstructions of arbitrary slices.. </li>
         </ul></li>
         <li><a href="http://www.github.com/jwbuurlage/Tomos">Tomos</a>. A library for distributed tomographic reconstruction.</li>
-        <li><a href="http://www.codu.in/ebsp">Epiphany BSP</a>. The Epiphany BSP library (EBSP) provides an implementation of the BSP model for the Epiphany coprocessor.
+        <li><a href="https://jwbuurlage.github.io/epiphany-bsp/">Epiphany BSP</a>. The Epiphany BSP library (EBSP) provides an implementation of the BSP model for the Epiphany coprocessor.
         </li>
         <li><a href="http://www.github.com/jwbuurlage/Zee">Zee</a>. Framework for partitioning and using sparse matrices.</li>
     </ul>
