--- a/index.html
+++ b/index.html
@@ -53,70 +53,82 @@
     </div>
 
     <main>
-    <section id="software">
-    <h1>Software</h1>
-    <ul>
-        <li><a href="https://jwbuurlage.github.io/Bulk">Bulk</a>. Modern interface for writing parallel programs in C++ in bulk-synchronous style. </li>
-        <li><em>Real-time reconstructions for tomography:</em><ul>
-        <li><a href="https://cicwi.github.io/RECAST3D">RECAST3D</a>. Real-time visualization tool for on-demand reconstruction of tomographic data. </li>
-        <li><a href="https://cicwi.github.io/TomoPackets">TomoPackets</a>. A library for real-time tomography pipelines based on ZeroMQ. </li>
-        <li><a href="https://cicwi.github.io/SliceRecon">SliceRecon</a>. A library for on-demand tomographic reconstructions of arbitrary slices.. </li>
-        </ul></li>
-        <li><a href="http://www.github.com/jwbuurlage/Tomos">Tomos</a>. A library for distributed tomographic reconstruction.</li>
-        <li><a href="https://jwbuurlage.github.io/epiphany-bsp/">Epiphany BSP</a>. The Epiphany BSP library (EBSP) provides an implementation of the BSP model for the Epiphany coprocessor.
-        </li>
-        <li><a href="http://www.github.com/jwbuurlage/Zee">Zee</a>. Framework for partitioning and using sparse matrices.</li>
-    </ul>
-</section>
-<section id="articles">
-  <h1>Articles</h1>
-  <ul>
-      <li><strong>A geometric partitioning method for distributed tomographic reconstruction</strong>.
-        Jan-Willem Buurlage, Rob Bisseling, Joost Batenburg (Submitted)</li>
-      <li><a href="https://doi.org/10.1007/978-3-319-96983-1_37">Bulk: a Modern C++ Interface for Bulk-Synchronous Parallel Programs</a>.
-        Jan-Willem Buurlage, Tom Bannink, Rob Bisseling. Euro-Par 2018: Parallel Processing (2018)</li>
-     <li><a href="http://iopscience.iop.org/article/10.1088/1361-6501/aab754/meta">Real-time quasi-3D tomographic reconstruction</a>.
-        Jan-Willem Buurlage, Holger Kohr, Willem Jan Palenstijn, Joost Batenburg.
-        Measurement Science and Technology (2018).
-      <li><a href="https://arxiv.org/abs/1608.07200">Bulk-synchronous
-            pseudo-streaming algorithms for many-core accelerators</a>. Jan-Willem Buurlage, Tom Bannink, Abe Wits. Unpublished (2017).</li>
-      <li><a
-            href="https://scholar.google.nl/scholar?cluster=18383112231106166666&hl=nl&as_sdt=0,5&sciodt=0,5">Self-Improving
-            Sparse Matrix Partitioning and Bulk-Synchronous
-            Pseudostreaming.</a>. Jan-Willem Buurlage. Master's thesis, Utrecht University (2016).</li>
-  </ul>
-  <h1>Teaching</h1>
-  <ul>
-    <li>  <a href="https://homepages.cwi.nl/~buurlage/lcsc/">Laboratory Class Scientific Computing 2018</a> (Utrecht University).</li>
-    <li> <a href="https://github.com/jwbuurlage/category-theory-programmers">Lecture Notes
-            on Category Theory and Haskell</a>. Last updated: <em>2017-08-01</em>.</li>
-  </ul>
-</section>
-<section id="talks">
-  <h1>Talks</h1>
-    <ul>
-      <li><em>2018-10-31</em>: <a href="2018-10-31-guest-lecture-parco.pdf">Slides on SpMV, Tomography and Bulk</a>. <br>
-          Guest lecture in the course <em>Parallel algorithms</em>. UU, Utrecht, The Netherlands.</li>
-      <li><em>2018-08-29</em>: <a href="2018-08-29-euro-par-bulk.pdf">Bulk: a Modern C++ Interface for Bulk-Synchronous Parallel Programs</a>. <br>
-          Euro-Par 2018. Turin, Italy.</li>
-      <li><em>2018-06-08</em>: <a href="2018-06-08-siam-is-presentation.pdf">Quasi-3D  iterative reconstruction</a>. <br>
-          SIAM Conference on Imaging Science (IS18). Bologna, Italy.</li>
-      <li><em>2018-03-09</em>: <a href="2018-03-09-siam-pp.pdf">Geometric Partitioning for Tomography</a>. <br>
-          SIAM Conference on Parallel Processing for Scientific Computing (PP18). Waseda University, Tokyo, Japan.</li>
-      <li><em>2017-11-07</em>: <a href="2017-11-07-spp.pdf">Sparse matrix partitioning</a>. <br>
-          Tomography seminar. DTU, Kongens Lyngby, Denmark.</li>
-      <li><em>2017-09-25</em>: <a href="2017-09-25-modern-bsp.pdf">Modern BSP using Bulk</a>. <br>
-          Guest lecture in the course <em>Parallel algorithms</em>. UU, Utrecht, The Netherlands.</li>
-      <li><em>2017-05-08</em>: <a href="2017-05-08-rt-tomography-vortech.pdf">Algorithms and methods for real-time tomography</a>. <br>
-          Lunch talk. VORtech, Delft, The Netherlands.</li>
-      <li><em>2017-04-11</em>: <a href="2017-04-11-slicer-presentation.pdf">Sofware tools for on demand slice reconstruction</a>. <br>
-          Focused Mini-Workshop on Real-Time Tomography. CWI, Amsterdam, The Netherlands.</li>
-      <li><em>2016-10-05</em>: <a href="2016-10-05-modern-bsp.pdf">Modern BSP: Scientific computing, HPC and Big Data</a>. <br>
-          Guest lecture in the course <em>Parallel algorithms</em>. UU, Utrecht, The Netherlands.</li>
-      <li><em>2016-07-05</em>: <a href="2016-07-05-bsps-presentation-hlpp.pdf">Bulk-synchronous pseudo-streaming for many-core accelerators</a> <br>
-          HLPP 2016, International Symposium on High-Level Parallel Programming and Applications. Muenster, Germany.</li>
-    </ul>
-</section>
+    <h1 id="articles">Articles</h1>
+<h4 id="2018">2018</h4>
+<ul>
+<li><em>A geometric partitioning method for distributed tomographic reconstruction</em>.
+Jan-Willem Buurlage, Rob Bisseling, Joost Batenburg (Submitted)</li>
+<li><a href="https://doi.org/10.1007/978-3-319-96983-1_37">Bulk: a Modern C++ Interface for Bulk-Synchronous Parallel Programs.</a>
+Jan-Willem Buurlage, Tom Bannink, Rob Bisseling. Euro-Par 2018: Parallel Processing (2018)</li>
+<li><a href="http://iopscience.iop.org/article/10.1088/1361-6501/aab754/meta">Real-time quasi-3D tomographic reconstruction.</a>
+Jan-Willem Buurlage, Holger Kohr, Willem Jan Palenstijn, Joost Batenburg.
+Measurement Science and Technology (2018).</li>
+</ul>
+<h4 id="2017">2017</h4>
+<ul>
+<li><a href="https://arxiv.org/abs/1608.07200">Bulk-synchronous pseudo-streaming algorithms for many-core accelerators</a>. Jan-Willem Buurlage, Tom Bannink, Abe Wits. <em>Preprint</em> (2017).</li>
+</ul>
+<h4 id="2016">2016</h4>
+<ul>
+<li><a href="https://scholar.google.nl/scholar?cluster=18383112231106166666&amp;hl=nl&amp;as_sdt=0,5&amp;sciodt=0,5">Self-Improving Sparse Matrix Partitioning and Bulk-Synchronous Pseudostreaming.</a>. Jan-Willem Buurlage. Master's thesis, Utrecht University (2016).</li>
+</ul>
+<h1 id="talks">Talks</h1>
+<h4 id="2018-1">2018</h4>
+<ul>
+<li><em>2018-10-31</em>: <a href="https://jwbuurlage.github.io/2018-10-31-guest-lecture-parco.pdf">Slides on SpMV, Tomography and Bulk</a>.
+Guest lecture in the course <em>Parallel algorithms</em>. UU, Utrecht, The Netherlands.</li>
+<li><em>2018-08-29</em>: <a href="https://jwbuurlage.github.io/2018-08-29-euro-par-bulk.pdf">Bulk: a Modern C++ Interface for Bulk-Synchronous Parallel Programs</a>.
+Euro-Par 2018. Turin, Italy.</li>
+<li><em>2018-06-08</em>: <a href="https://jwbuurlage.github.io/2018-06-08-siam-is-presentation.pdf">Quasi-3D  iterative reconstruction</a>.
+SIAM Conference on Imaging Science (IS18). Bologna, Italy.</li>
+<li><em>2018-03-09</em>: <a href="https://jwbuurlage.github.io/2018-03-09-siam-pp.pdf">Geometric Partitioning for Tomography</a>.
+SIAM Conference on Parallel Processing for Scientific Computing (PP18). Waseda University, Tokyo, Japan.</li>
+</ul>
+<h4 id="2017-1">2017</h4>
+<ul>
+<li><em>2017-11-07</em>: <a href="https://jwbuurlage.github.io/2017-11-07-spp.pdf">Sparse matrix partitioning</a>.
+Tomography seminar. DTU, Kongens Lyngby, Denmark.</li>
+<li><em>2017-09-25</em>: <a href="https://jwbuurlage.github.io/2017-09-25-modern-bsp.pdf">Modern BSP using Bulk</a>.
+Guest lecture in the course <em>Parallel algorithms</em>. UU, Utrecht, The Netherlands.</li>
+<li><em>2017-05-08</em>: <a href="https://jwbuurlage.github.io/2017-05-08-rt-tomography-vortech.pdf">Algorithms and methods for real-time tomography</a>.
+Lunch talk. VORtech, Delft, The Netherlands.</li>
+<li><em>2017-04-11</em>: <a href="https://jwbuurlage.github.io/2017-04-11-slicer-presentation.pdf">Sofware tools for on demand slice reconstruction</a>.
+Focused Mini-Workshop on Real-Time Tomography. CWI, Amsterdam, The Netherlands.</li>
+</ul>
+<h4 id="2016-1">2016</h4>
+<ul>
+<li><em>2016-10-05</em>: <a href="https://jwbuurlage.github.io/2016-10-05-modern-bsp.pdf">Modern BSP: Scientific computing, HPC and Big Data</a>.
+Guest lecture in the course <em>Parallel algorithms</em>. UU, Utrecht, The Netherlands.</li>
+<li><em>2016-07-05</em>: <a href="https://jwbuurlage.github.io/2016-07-05-bsps-presentation-hlpp.pdf">Bulk-synchronous pseudo-streaming for many-core accelerators</a>
+HLPP 2016, International Symposium on High-Level Parallel Programming and Applications. Muenster, Germany.</li>
+</ul>
+<h1 id="software">Software</h1>
+<h4 id="active-projects">Active projects</h4>
+<ul>
+<li><a href="https://jwbuurlage.github.io/Bulk">Bulk</a>. Modern interface for writing
+parallel programs in C++ in bulk-synchronous style.</li>
+<li><em>Real-time reconstructions for tomography</em>:
+<ul>
+<li><a href="https://cicwi.github.io/RECAST3D">RECAST3D</a>. Real-time visualization tool
+for on-demand reconstruction of tomographic data.</li>
+<li><a href="https://cicwi.github.io/TomoPackets">TomoPackets</a>. A library for real-time
+tomography pipelines based on ZeroMQ.</li>
+<li><a href="https://cicwi.github.io/">SliceRecon</a>. A library for on-demand tomographic
+reconstructions of arbitrary slices.</li>
+</ul>
+</li>
+<li><a href="http://www.github.com/jwbuurlage/Tomos">Tomos</a>. A library for distributed tomographic reconstruction.</li>
+</ul>
+<h4 id="archive">Archive</h4>
+<ul>
+<li><a href="https://jwbuurlage.github.io/epiphany-bsp/">Epiphany BSP</a>. An BSPlib implementation for the Epiphany coprocessor.</li>
+<li><a href="http://www.github.com/jwbuurlage/Zee">Zee</a>. Framework for partitioning and using sparse matrices.</li>
+</ul>
+<h1 id="teaching">Teaching</h1>
+<ul>
+<li><a href="https://homepages.cwi.nl/%7Ebuurlage/lcsc/">Laboratory Class Scientific Computing 2018</a> (Utrecht University).</li>
+<li><a href="https://github.com/jwbuurlage/category-theory-programmers">Lecture Notes for Category Theory seminar</a>. Last updated: <em>2017-08-01</em>.</li>
+</ul>
 
     </main>
     
