Update ParCo title

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@ Measurement Science and Technology (2018).</li>
 <h1 id="talks">Talks</h1>
 <h4 id="2018-1">2018</h4>
 <ul>
-<li><em>2018-10-31</em>: <a href="https://jwbuurlage.github.io/2018-10-31-guest-lecture-parco.pdf">Slides on SpMV, Tomography and Bulk</a>.
+<li><em>2018-10-31</em>: <a href="https://jwbuurlage.github.io/2018-10-31-guest-lecture-parco.pdf">SpMV, Tomography and Bulk</a>.
 Guest lecture in the course <em>Parallel algorithms</em>. UU, Utrecht, The Netherlands.</li>
 <li><em>2018-08-29</em>: <a href="https://jwbuurlage.github.io/2018-08-29-euro-par-bulk.pdf">Bulk: a Modern C++ Interface for Bulk-Synchronous Parallel Programs</a>.
 Euro-Par 2018. Turin, Italy.</li>
