--- a/index.html
+++ b/index.html
@@ -106,11 +106,15 @@ Guest lecture in the course <em>Parallel algorithms</em>. UU, Utrecht, The Nethe
 HLPP 2016, International Symposium on High-Level Parallel Programming and Applications. Muenster, Germany.</li>
 </ul>
 <h1 id="software">Software</h1>
+<p><img src="https://raw.githubusercontent.com/cicwi/RECAST3D/develop/docs/preview_usage.gif" class="float-right" /></p>
 <h4 id="active-projects">Active projects</h4>
 <ul>
-<li><a href="https://jwbuurlage.github.io/Bulk">Bulk</a>. Modern interface for writing
-parallel programs in C++ in bulk-synchronous style.</li>
-<li><em>Real-time reconstructions for tomography</em>:
+<li>
+<p><a href="https://jwbuurlage.github.io/Bulk">Bulk</a>. Modern interface for writing
+parallel programs in C++ in bulk-synchronous style.</p>
+</li>
+<li>
+<p><em>Real-time reconstructions for tomography</em>:</p>
 <ul>
 <li><a href="https://cicwi.github.io/RECAST3D">RECAST3D</a>. Real-time visualization tool
 for on-demand reconstruction of tomographic data.</li>
@@ -120,7 +124,9 @@ tomography pipelines based on ZeroMQ.</li>
 reconstructions of arbitrary slices.</li>
 </ul>
 </li>
-<li><a href="http://www.github.com/jwbuurlage/Tomos">Tomos</a>. A library for distributed tomographic reconstruction.</li>
+<li>
+<p><a href="http://www.github.com/jwbuurlage/Tomos">Tomos</a>. A library for distributed tomographic reconstruction.</p>
+</li>
 </ul>
 <h4 id="archive">Archive</h4>
 <ul>
