--- a/index.html
+++ b/index.html
@@ -109,12 +109,9 @@ HLPP 2016, International Symposium on High-Level Parallel Programming and Applic
 <p><img src="https://raw.githubusercontent.com/cicwi/RECAST3D/develop/docs/preview_usage.gif" class="float-right" /></p>
 <h4 id="active-projects">Active projects</h4>
 <ul>
-<li>
-<p><a href="https://jwbuurlage.github.io/Bulk">Bulk</a>. Modern interface for writing
-parallel programs in C++ in bulk-synchronous style.</p>
-</li>
-<li>
-<p><em>Real-time reconstructions for tomography</em>:</p>
+<li><a href="https://jwbuurlage.github.io/Bulk">Bulk</a>. Modern interface for writing
+parallel programs in C++ in bulk-synchronous style.</li>
+<li><em>Real-time reconstructions for tomography</em>:
 <ul>
 <li><a href="https://cicwi.github.io/RECAST3D">RECAST3D</a>. Real-time visualization tool
 for on-demand reconstruction of tomographic data.</li>
@@ -124,9 +121,7 @@ tomography pipelines based on ZeroMQ.</li>
 reconstructions of arbitrary slices.</li>
 </ul>
 </li>
-<li>
-<p><a href="http://www.github.com/jwbuurlage/Tomos">Tomos</a>. A library for distributed tomographic reconstruction.</p>
-</li>
+<li><a href="http://www.github.com/jwbuurlage/Tomos">Tomos</a>. A library for distributed tomographic reconstruction.</li>
 </ul>
 <h4 id="archive">Archive</h4>
 <ul>
