--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@ Guest lecture in the course <em>Parallel algorithms</em>. UU, Utrecht, The Nethe
 HLPP 2016, International Symposium on High-Level Parallel Programming and Applications. Muenster, Germany.</li>
 </ul>
 <h1 id="software">Software</h1>
-<p><img src="https://raw.githubusercontent.com/cicwi/RECAST3D/develop/docs/preview_usage.gif" class="float-right" /></p>
+<p><img src="https://cicwi.github.io/RECAST3D/images/rotate_slice.gif" class="float-right" width="400px" /></p>
 <h4 id="active-projects">Active projects</h4>
 <ul>
 <li><a href="https://jwbuurlage.github.io/Bulk">Bulk</a>. Modern interface for writing
@@ -125,7 +125,7 @@ reconstructions of arbitrary slices.</li>
 </ul>
 <h4 id="archive">Archive</h4>
 <ul>
-<li><a href="https://jwbuurlage.github.io/epiphany-bsp/">Epiphany BSP</a>. An BSPlib implementation for the Epiphany coprocessor.</li>
+<li><a href="https://jwbuurlage.github.io/epiphany-bsp/">Epiphany BSP</a>. A BSPlib implementation for the Epiphany coprocessor.</li>
 <li><a href="http://www.github.com/jwbuurlage/Zee">Zee</a>. Framework for partitioning and using sparse matrices.</li>
 </ul>
 <h1 id="teaching">Teaching</h1>
