--- a/index.html
+++ b/index.html
@@ -59,13 +59,13 @@
     <h1 id="articles">Articles</h1>
 <h4 id="2018">2018</h4>
 <ul>
-<li><em>A geometric partitioning method for distributed tomographic reconstruction</em>.
-Jan-Willem Buurlage, Rob Bisseling, Joost Batenburg (Submitted)</li>
+<li><a href="https://doi.org/10.1016/j.parco.2018.12.007">A geometric partitioning method for distributed tomographic reconstruction.</a>
+Jan-Willem Buurlage, Rob Bisseling, Joost Batenburg. Parallel Computing (2018)</li>
 <li><a href="https://doi.org/10.1007/978-3-319-96983-1_37">Bulk: a Modern C++ Interface for Bulk-Synchronous Parallel Programs.</a>
 Jan-Willem Buurlage, Tom Bannink, Rob Bisseling. Euro-Par 2018: Parallel Processing (2018)</li>
 <li><a href="http://iopscience.iop.org/article/10.1088/1361-6501/aab754/meta">Real-time quasi-3D tomographic reconstruction.</a>
 Jan-Willem Buurlage, Holger Kohr, Willem Jan Palenstijn, Joost Batenburg.
-Measurement Science and Technology (2018).</li>
+Measurement Science and Technology (2018)</li>
 </ul>
 <h4 id="2017">2017</h4>
 <ul>
