--- a/index.html
+++ b/index.html
@@ -76,6 +76,11 @@ Measurement Science and Technology (2018)</li>
 <li><a href="https://scholar.google.nl/scholar?cluster=18383112231106166666&amp;hl=nl&amp;as_sdt=0,5&amp;sciodt=0,5">Self-Improving Sparse Matrix Partitioning and Bulk-Synchronous Pseudostreaming.</a>. Jan-Willem Buurlage. Master's thesis, Utrecht University (2016).</li>
 </ul>
 <h1 id="talks">Talks</h1>
+<h4 id="2019">2019</h4>
+<ul>
+<li><em>2019-01-22</em>: <a href="https://jwbuurlage.github.io/20190122-this-weeks-discoveries.pdf">Data partitioning strategies for 3D tomographic imaging</a>.
+<em>This week's discoveries</em>. Leiden University, The Netherlands.</li>
+</ul>
 <h4 id="2018-1">2018</h4>
 <ul>
 <li><em>2018-10-31</em>: <a href="https://jwbuurlage.github.io/2018-10-31-guest-lecture-parco.pdf">SpMV, Tomography and Bulk</a>.
