Add link to LCSC2019 website

--- a/index.html
+++ b/index.html
@@ -135,6 +135,7 @@ reconstructions of arbitrary slices.</li>
 </ul>
 <h1 id="teaching">Teaching</h1>
 <ul>
+<li><a href="/lcsc2019/">Laboratory Class Scientific Computing 2019</a> (Utrecht University).</li>
 <li><a href="https://homepages.cwi.nl/%7Ebuurlage/lcsc/">Laboratory Class Scientific Computing 2018</a> (Utrecht University).</li>
 <li><a href="https://github.com/jwbuurlage/category-theory-programmers">Lecture Notes for Category Theory seminar</a>. Last updated: <em>2017-08-01</em>.</li>
 </ul>
