--- a/lcsc2019/index.html
+++ b/lcsc2019/index.html
@@ -107,7 +107,7 @@ been distributed, and are expected to be typeset using LaTeX.</p>
 <ul>
 <li>Theory:
 <ul>
-<li>[LN] <a href="https://jwbuurlage.github.io/lcsc2019/lcsc-lecture-notes.pdf">Lecture notes</a>. Available on Blackboard, a physical copy can be bought from A-Eskwadraat.</li>
+<li>[LN] <a href="/lcsc-lecture-notes.pdf">Lecture notes</a>. Available on Blackboard, a physical copy can be bought from A-Eskwadraat.</li>
 </ul>
 </li>
 <li>C++
