--- a/lcsc2019/index.html
+++ b/lcsc2019/index.html
@@ -63,6 +63,19 @@ two hours for working on exercises.</p>
 </ul>
 </td>
 </tr>
+<tr>
+<td>13-02-2019</td>
+<td>
+<ul>
+<li> Course overview, topics, grading etc.</li>
+<li> Random number generation (II), general distributions</li>
+<li> C++: arrays, pointers, classes..</li>
+<li> <strong>Exercises:</strong> 2.9, 2.10</li>
+<li> <strong>Read:</strong> [LN] 2.4 - 2.5, [BS] 2.3 - 3.2</li>
+<li> <strong>Hand-in:</strong> 2.7, 2.8 (due: 26-02)</li>
+</ul>
+</td>
+<
 </tbody>
 </table>
 <h2 id="reports">Reports</h2>
