--- a/lcsc2019/index.html
+++ b/lcsc2019/index.html
@@ -68,12 +68,24 @@ two hours for working on exercises.</p>
 <td>
 <ul>
 <li> Random number generation (II), general distributions</li>
-<li> C++: arrays, pointers, classes..</li>
+<li> C++: arrays, pointers, classes.</li>
 <li> <strong>Exercises:</strong> 2.9, 2.10</li>
 <li> <strong>Read:</strong> [LN] 2.4 - 2.5, [BS] 2.3 - 3.2</li>
 <li> <strong>Hand-in:</strong> 2.7, 2.8 (due: 26-02)</li>
 </ul>
 </td>
+</tr>
+<tr>
+<td>20-02-2019</td>
+<td>
+<ul>
+<li> Random number generation (III): Advanced RNGs, Xorshift, Mersenne Twister</li>
+<li> C++: polymorphism (II), templates.</li>
+<li> <strong>Exercises:</strong> 2.12, 2.13</li>
+<li> <strong>Read:</strong>[LN] 2.6, [BS] 3.3 - 3.4</li>
+</ul>
+</td>
+</tr>
 </tbody>
 </table>
 <h2 id="reports">Reports</h2>
