--- a/lcsc2019/index.html
+++ b/lcsc2019/index.html
@@ -86,6 +86,15 @@ two hours for working on exercises.</p>
 </ul>
 </td>
 </tr>
+<tr>
+<td>27-02-2019</td>
+<td>
+<ul>
+<li> C++: The standard library.</li>
+<li> <strong>Read:</strong> [BS] Chapter 4</li>
+</ul>
+</td>
+</tr>
 </tbody>
 </table>
 <h2 id="reports">Reports</h2>
@@ -99,7 +108,7 @@ choices.</li>
 <p>In addition, all exercises listed in the schedule, except those marked
 <em>hand-in</em> or <em>optional</em>, are expected to be treated in your reports. Do not refer to them
 explicitely, but rather make them part of the story.</p>
-<p>Solutions to hand-in exercises should be handed in on paper <em>one week</em> after they have
+<p>Solutions to hand-in exercises should be handed <em>two weeks</em> after they have
 been distributed, and are expected to be typeset using LaTeX.</p>
 <p>The following table shows how the final grade will be computed.</p>
 <div class="table-responsive-sm" style="max-width: 300px;">
@@ -130,7 +139,7 @@ been distributed, and are expected to be typeset using LaTeX.</p>
 <ul>
 <li>Theory:
 <ul>
-<li>[LN] <a href="/lcsc-lectures-notes.pdf">Lecture notes</a>. Available on Blackboard, a physical copy can be bought from A-Eskwadraat.</li>
+<li>[LN] <a href="/lcsc-lectures-notes.pdf">Lecture notes</a>.</li>
 </ul>
 </li>
 <li>C++
