--- a/lcsc2019/index.html
+++ b/lcsc2019/index.html
@@ -95,6 +95,23 @@ two hours for working on exercises.</p>
 </ul>
 </td>
 </tr>
+<tr>
+<td>06-03-2019</td>
+<td>
+<ul>
+<li> Extended tutorial </li>
+</ul>
+</td>
+</tr>
+<tr>
+<td>13-03-2019</td>
+<td>
+<ul>
+<li>TBA</li>
+<li><em>Optional</em>: hand-in RNG code for review.</li>
+</ul>
+</td>
+</tr>
 </tbody>
 </table>
 <h2 id="reports">Reports</h2>
@@ -135,6 +152,9 @@ been distributed, and are expected to be typeset using LaTeX.</p>
 </tbody>
 </table>
 </div>
+<h2 id="handing-in-your-code">Handing in your code</h2>
+<p>When handing in code, please make a single ZIP file containing all source files,
+headers, and a CMakeLists.txt build file that can be used to compile your code.</p>
 <h2 id="literature">Literature</h2>
 <ul>
 <li>Theory:
