--- a/lcsc2019/index.html
+++ b/lcsc2019/index.html
@@ -107,7 +107,10 @@ two hours for working on exercises.</p>
 <td>13-03-2019</td>
 <td>
 <ul>
-<li>TBA</li>
+<li>Monte Carlo methods (I)</li>
+<li>C++: std::function, anonymous functions, smart pointers</li>
+<li><strong>Exercises:</strong> 3.1 -- 3.4</li>
+<li><strong>Read:</strong> [LN] 3.1, 3.2</li>
 <li><em>Optional</em>: hand-in RNG code for review.</li>
 </ul>
 </td>
