--- a/lcsc2019/index.html
+++ b/lcsc2019/index.html
@@ -115,6 +115,18 @@ two hours for working on exercises.</p>
 </ul>
 </td>
 </tr>
+<tr>
+<td>20-03-2019</td>
+<td>
+<ul>
+<li>Monte Carlo methods (II)</li>
+<li>C++: copy versus move</li>
+<li><strong>Exercises:</strong> 3.8</li>
+<li><strong>Read:</strong> [LN] 3.3</li>
+<li> <strong>Hand-in 2:</strong> radiation density (1.6.2 in <a href="https://github.com/jwbuurlage/lcsc-2019/blob/master/code/exercises.pdf"><code>exercises.pdf</code></a>). (due: 03-04).</li>
+</ul>
+</td>
+</tr>
 </tbody>
 </table>
 <h2 id="reports">Reports</h2>
