--- a/lcsc2019/index.html
+++ b/lcsc2019/index.html
@@ -127,6 +127,15 @@ two hours for working on exercises.</p>
 </ul>
 </td>
 </tr>
+<tr>
+<td>27-03-2019</td>
+<td>
+<ul>
+<li>C++: <chrono> and helper classes</li>
+<li> <strong>Tutorial:</strong> work on hand-in and report.
+</ul>
+</td>
+</tr>
 </tbody>
 </table>
 <h2 id="reports">Reports</h2>
