Add clang-format example

--- a/lcsc2019/index.html
+++ b/lcsc2019/index.html
@@ -188,7 +188,7 @@ been distributed, and are expected to be typeset using LaTeX.</p>
 <h2 id="handing-in-your-code">Handing in your code</h2>
 <p>When handing in code, please make a single ZIP file containing all source files,
 headers, and a CMakeLists.txt build file that can be used to compile your code.</p>
-<p>Use clang-format to clean up your code. My personal configuration can be found <a href="/clang-format.txt">here</a>.</p>
+<p>Use clang-format to clean up your code. My personal configuration can be found <a href="https://raw.githubusercontent.com/jwbuurlage/jwbuurlage.github.io/master/clang-format.txt">here</a>.</p>
 <h2 id="literature">Literature</h2>
 <ul>
 <li>Theory:
