--- a/lcsc2019/index.html
+++ b/lcsc2019/index.html
@@ -140,8 +140,25 @@ two hours for working on exercises.</p>
 <td>03-04-2019</td>
 <td>
 <ul>
-<li>C++: <random> and helper classe</li>
-<li> <strong>Tutorial:</strong> work on hand-in and report.
+<li>C++: <random></li>
+<li> <strong>Tutorial:</strong> work on hand-in and report.</li>
+</ul>
+</td>
+</tr>
+<tr>
+<td>10-04-2019</td>
+<td>
+<ul>
+<li> <strong>Tutorial:</strong> work on hand-in and report.</li>
+</ul>
+</td>
+</tr>
+<tr>
+<td>17-04-2019</td>
+<td>
+<ul>
+<li>Deadline Report I</li>
+<li> <strong>No lecture</strong> </li.
 </ul>
 </td>
 </tr>
