--- a/lcsc2019/index.html
+++ b/lcsc2019/index.html
@@ -131,7 +131,7 @@ two hours for working on exercises.</p>
 <td>27-03-2019</td>
 <td>
 <ul>
-<li>C++: <code><chrono></code> and helper classes</li>
+<li>C++: <code>&lt;chrono&gt;</code> and helper classes</li>
 <li> <strong>Tutorial:</strong> work on hand-in and report.
 </ul>
 </td>
@@ -140,7 +140,7 @@ two hours for working on exercises.</p>
 <td>03-04-2019</td>
 <td>
 <ul>
-<li>C++: <code><random></code></li>
+<li>C++: <code>&lt;random&gt;</code></li>
 <li> <strong>Tutorial:</strong> work on hand-in and report.</li>
 </ul>
 </td>
