--- a/lcsc2019/index.html
+++ b/lcsc2019/index.html
@@ -162,6 +162,26 @@ two hours for working on exercises.</p>
 </ul>
 </td>
 </tr>
+<tr>
+<td>24-04-2019</td>
+<td>
+<ul>
+<li>Genetic algorithms (I)</li>
+<li><strong>Exercises:</strong> 7.1, 7.2, 7.3</li>
+<li><strong>Read:</strong> [LN] 4.1</li>
+</ul>
+</td>
+</tr>
+<tr>
+<td>01-05-2019</td>
+<td>
+<ul>
+<li>Genetic algorithms (II)</li>
+<li>C++: iterators</li>
+<li><strong>Hand-in:</strong> iterating over containers</li>
+</ul>
+</td>
+</tr>
 </tbody>
 </table>
 <h2 id="reports">Reports</h2>
