--- a/lcsc2019/index.html
+++ b/lcsc2019/index.html
@@ -167,7 +167,7 @@ two hours for working on exercises.</p>
 <td>
 <ul>
 <li>Genetic algorithms (I)</li>
-<li><strong>Exercises:</strong> 7.1, 7.2, 7.3</li>
+<li><strong>Exercises:</strong> 1.7.1, 1.7.2, 1.7.3</li>
 <li><strong>Read:</strong> [LN] 4.1</li>
 </ul>
 </td>
@@ -178,7 +178,7 @@ two hours for working on exercises.</p>
 <ul>
 <li>Genetic algorithms (II)</li>
 <li>C++: iterators</li>
-<li><strong>Hand-in:</strong> iterating over containers</li>
+<li><strong>Hand-in 3:</strong> iterating over containers (1.8.1 in <a href="https://github.com/jwbuurlage/lcsc-2019/blob/master/code/exercises.pdf"><code>exercises.pdf</code></a>). (due: 15-05)</li>
 </ul>
 </td>
 </tr>
