--- a/lcsc2019/index.html
+++ b/lcsc2019/index.html
@@ -182,6 +182,62 @@ two hours for working on exercises.</p>
 </ul>
 </td>
 </tr>
+<tr>
+<td>08-05-2019</td>
+<td>
+<ul>
+<li>Report I discussions, no lecture</li>
+</ul>
+</td>
+</tr>
+<tr>
+<td>15-05-2019</td>
+<td>
+<ul>
+<li>Other optimization methods</li>
+</ul>
+</td>
+</tr>
+<tr>
+<td>22-05-2019</td>
+<td>
+<ul>
+<li>Projects overview</li>
+</ul>
+</td>
+</tr>
+<tr>
+<td>29-05-2019</td>
+<td>
+<ul>
+<li>Tutorial</li>
+</ul>
+</td>
+</tr>
+<tr>
+<td>05-06-2019</td>
+<td>
+<ul>
+<li>Tutorial</li>
+</ul>
+</td>
+</tr>
+<tr>
+<td>12-06-2019</td>
+<td>
+<ul>
+<li>Final tutorial</li>
+</ul>
+</td>
+</tr>
+<tr>
+<td>02-07-2019</td>
+<td>
+<ul>
+<li>Deadline Report II</li>
+</ul>
+</td>
+</tr>
 </tbody>
 </table>
 <h2 id="reports">Reports</h2>
