--- a/lcsc2019/index.html
+++ b/lcsc2019/index.html
@@ -194,7 +194,7 @@ two hours for working on exercises.</p>
 <td>15-05-2019</td>
 <td>
 <ul>
-<li>Other optimization methods</li>
+<li><em>Guest talk</em>: GOMEA, Richard Schoonhoven (UU / CWI)</li>
 </ul>
 </td>
 </tr>
@@ -202,7 +202,8 @@ two hours for working on exercises.</p>
 <td>22-05-2019</td>
 <td>
 <ul>
-<li>Projects overview</li>
+<li>Finalize Projects</li>
+<li>C++: unit testing</li>
 </ul>
 </td>
 </tr>
