--- a/index.html
+++ b/index.html
@@ -57,10 +57,24 @@
 
     <main>
     <h1 id="articles">Articles</h1>
+<h4 id="2020">2020</h4>
+<ul>
+<li><em>A projection-based partitioning method for distributed tomographic reconstruction</em>.
+Jan-Willem Buurlage, Christian Schleputz et al. SIAM Conference on Parallel Processing for Scientific Computing (2020, Accepted for publication)</li>
+</ul>
+<h4 id="2019">2019</h4>
+<ul>
+<li>
+<p><em>Real-time reconstruction and visualisation towards dynamic feedback control during time-resolved tomography experiments at TOMCAT</em>.
+Jan-Willem Buurlage, Christian Schleputz et al. Scientific Reports (2019, Accepted for publication)</p>
+</li>
+<li>
+<p><a href="https://doi.org/10.1016/j.parco.2018.12.007">A geometric partitioning method for distributed tomographic reconstruction.</a>
+Jan-Willem Buurlage, Rob Bisseling, Joost Batenburg. Parallel Computing (2019)</p>
+</li>
+</ul>
 <h4 id="2018">2018</h4>
 <ul>
-<li><a href="https://doi.org/10.1016/j.parco.2018.12.007">A geometric partitioning method for distributed tomographic reconstruction.</a>
-Jan-Willem Buurlage, Rob Bisseling, Joost Batenburg. Parallel Computing (2018)</li>
 <li><a href="https://doi.org/10.1007/978-3-319-96983-1_37">Bulk: a Modern C++ Interface for Bulk-Synchronous Parallel Programs.</a>
 Jan-Willem Buurlage, Tom Bannink, Rob Bisseling. Euro-Par 2018: Parallel Processing (2018)</li>
 <li><a href="http://iopscience.iop.org/article/10.1088/1361-6501/aab754/meta">Real-time quasi-3D tomographic reconstruction.</a>
@@ -76,10 +90,15 @@ Measurement Science and Technology (2018)</li>
 <li><a href="https://scholar.google.nl/scholar?cluster=18383112231106166666&amp;hl=nl&amp;as_sdt=0,5&amp;sciodt=0,5">Self-Improving Sparse Matrix Partitioning and Bulk-Synchronous Pseudostreaming.</a>. Jan-Willem Buurlage. Master's thesis, Utrecht University (2016).</li>
 </ul>
 <h1 id="talks">Talks</h1>
-<h4 id="2019">2019</h4>
+<h4 id="2019-1">2019</h4>
 <ul>
-<li><em>2019-01-22</em>: <a href="https://jwbuurlage.github.io/20190122-this-weeks-discoveries.pdf">Data partitioning strategies for 3D tomographic imaging</a>.
-<em>This week's discoveries</em>. Leiden University, The Netherlands.</li>
+<li>
+<p>2019-07-12: Partitioning strategies for large-scale tomographic inversion. <em>Applied Inverse Problems</em>. Grenoble, France.</p>
+</li>
+<li>
+<p><em>2019-01-22</em>: <a href="https://jwbuurlage.github.io/20190122-this-weeks-discoveries.pdf">Data partitioning strategies for 3D tomographic imaging</a>.
+<em>This week's discoveries</em>. Leiden University, The Netherlands.</p>
+</li>
 </ul>
 <h4 id="2018-1">2018</h4>
 <ul>
@@ -111,7 +130,7 @@ Guest lecture in the course <em>Parallel algorithms</em>. UU, Utrecht, The Nethe
 HLPP 2016, International Symposium on High-Level Parallel Programming and Applications. Muenster, Germany.</li>
 </ul>
 <h1 id="software">Software</h1>
-<p><img src="https://cicwi.github.io/RECAST3D/images/rotate_slice.gif" class="float-right" width="400px" /></p>
+<img src="https://cicwi.github.io/RECAST3D/images/rotate_slice.gif" class="float-right" width="400px" />
 <h4 id="active-projects">Active projects</h4>
 <ul>
 <li><a href="https://jwbuurlage.github.io/Bulk">Bulk</a>. Modern interface for writing
