--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <div class="col-sm-6">
         <div class="card">
             <div class="card-body">
-                <img class="rounded float-right mr-3" src="/jw.jpg" />
+                <img width="100px" class="rounded float-right mr-3" src="/jw.jpg" />
                 <h4 class="card-title">Jan-Willem Buurlage</h4>
                 <h5 class="card-subtitle mb-2 text-muted">PhD Candidate</h5>
                 <h5 class="card-subtitle mb-2 text-muted">Centrum Wiskunde &amp; Informatica (CWI)</h5>
