--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 <h4 id="2020">2020</h4>
 <ul>
 <li><em>A projection-based partitioning method for distributed tomographic reconstruction</em>.
-Jan-Willem Buurlage, Christian Schleputz et al. SIAM Conference on Parallel Processing for Scientific Computing (2020, Accepted for publication)</li>
+Jan-Willem Buurlage, Rob Bisseling, Willem Jan Palenstijn, Joost Batenburg. SIAM Conference on Parallel Processing for Scientific Computing (2020, Accepted for publication)</li>
 </ul>
 <h4 id="2019">2019</h4>
 <ul>
@@ -87,7 +87,7 @@ Measurement Science and Technology (2018)</li>
 </ul>
 <h4 id="2016">2016</h4>
 <ul>
-<li><a href="https://scholar.google.nl/scholar?cluster=18383112231106166666&amp;hl=nl&amp;as_sdt=0,5&amp;sciodt=0,5">Self-Improving Sparse Matrix Partitioning and Bulk-Synchronous Pseudostreaming.</a>. Jan-Willem Buurlage. Master's thesis, Utrecht University (2016).</li>
+<li><a href="https://scholar.google.nl/scholar?cluster=18383112231106166666&amp;hl=nl&amp;as_sdt=0,5&amp;sciodt=0,5">Self-Improving Sparse Matrix Partitioning and Bulk-Synchronous Pseudostreaming</a>. Jan-Willem Buurlage. Master's thesis, Utrecht University (2016).</li>
 </ul>
 <h1 id="talks">Talks</h1>
 <h4 id="2019-1">2019</h4>
