--- a/index.html
+++ b/index.html
@@ -69,6 +69,10 @@ Jan-Willem Buurlage, Rob Bisseling, Willem Jan Palenstijn, Joost Batenburg. SIAM
 Jan-Willem Buurlage, Christian Schleputz et al. Scientific Reports (2019, Accepted for publication)</p>
 </li>
 <li>
+<p><a href="https://doi.org/10.1109/TRPMS.2019.2942186">Multigrid reconstruction in tomographic imaging.</a>
+D Marlevi, H Kohr, JW Buurlage, B Gao, KJ Batenburg, M Colarieti-Tosti. IEEE Transactions on Radiation and Plasma Medical Sciences (2019)</p>
+</li>
+<li>
 <p><a href="https://doi.org/10.1016/j.parco.2018.12.007">A geometric partitioning method for distributed tomographic reconstruction.</a>
 Jan-Willem Buurlage, Rob Bisseling, Joost Batenburg. Parallel Computing (2019)</p>
 </li>
