Initials for authors

--- a/index.html
+++ b/index.html
@@ -60,13 +60,13 @@
 <h4 id="2020">2020</h4>
 <ul>
 <li><em>A projection-based partitioning method for distributed tomographic reconstruction</em>.
-Jan-Willem Buurlage, Rob Bisseling, Willem Jan Palenstijn, Joost Batenburg. SIAM Conference on Parallel Processing for Scientific Computing (2020, Accepted for publication)</li>
+JW Buurlage, RH Bisseling, WJ Palenstijn, KJ Batenburg. SIAM Conference on Parallel Processing for Scientific Computing (2020, Accepted for publication)</li>
 </ul>
 <h4 id="2019">2019</h4>
 <ul>
 <li>
 <p><em>Real-time reconstruction and visualisation towards dynamic feedback control during time-resolved tomography experiments at TOMCAT</em>.
-Jan-Willem Buurlage, Christian Schleputz et al. Scientific Reports (2019, Accepted for publication)</p>
+JW Buurlage, CM Schleputz et al. Scientific Reports (2019, Accepted for publication)</p>
 </li>
 <li>
 <p><a href="https://doi.org/10.1109/TRPMS.2019.2942186">Multigrid reconstruction in tomographic imaging.</a>
@@ -74,24 +74,24 @@ D Marlevi, H Kohr, JW Buurlage, B Gao, KJ Batenburg, M Colarieti-Tosti. IEEE Tra
 </li>
 <li>
 <p><a href="https://doi.org/10.1016/j.parco.2018.12.007">A geometric partitioning method for distributed tomographic reconstruction.</a>
-Jan-Willem Buurlage, Rob Bisseling, Joost Batenburg. Parallel Computing (2019)</p>
+JW Buurlage, RH Bisseling, KJ Batenburg. Parallel Computing (2019)</p>
 </li>
 </ul>
 <h4 id="2018">2018</h4>
 <ul>
 <li><a href="https://doi.org/10.1007/978-3-319-96983-1_37">Bulk: a Modern C++ Interface for Bulk-Synchronous Parallel Programs.</a>
-Jan-Willem Buurlage, Tom Bannink, Rob Bisseling. Euro-Par 2018: Parallel Processing (2018)</li>
+JW Buurlage, TR Bannink, RH Bisseling. Euro-Par 2018: Parallel Processing (2018)</li>
 <li><a href="http://iopscience.iop.org/article/10.1088/1361-6501/aab754/meta">Real-time quasi-3D tomographic reconstruction.</a>
-Jan-Willem Buurlage, Holger Kohr, Willem Jan Palenstijn, Joost Batenburg.
+JW Buurlage, H Kohr, WJ Palenstijn, KJ Batenburg.
 Measurement Science and Technology (2018)</li>
 </ul>
 <h4 id="2017">2017</h4>
 <ul>
-<li><a href="https://arxiv.org/abs/1608.07200">Bulk-synchronous pseudo-streaming algorithms for many-core accelerators</a>. Jan-Willem Buurlage, Tom Bannink, Abe Wits. <em>Preprint</em> (2017).</li>
+<li><a href="https://arxiv.org/abs/1608.07200">Bulk-synchronous pseudo-streaming algorithms for many-core accelerators</a>. JW Buurlage, TR Bannink, A Wits. <em>Preprint</em> (2017).</li>
 </ul>
 <h4 id="2016">2016</h4>
 <ul>
-<li><a href="https://scholar.google.nl/scholar?cluster=18383112231106166666&amp;hl=nl&amp;as_sdt=0,5&amp;sciodt=0,5">Self-Improving Sparse Matrix Partitioning and Bulk-Synchronous Pseudostreaming</a>. Jan-Willem Buurlage. Master's thesis, Utrecht University (2016).</li>
+<li><a href="https://scholar.google.nl/scholar?cluster=18383112231106166666&amp;hl=nl&amp;as_sdt=0,5&amp;sciodt=0,5">Self-Improving Sparse Matrix Partitioning and Bulk-Synchronous Pseudostreaming</a>. JW Buurlage. Master's thesis, Utrecht University (2016).</li>
 </ul>
 <h1 id="talks">Talks</h1>
 <h4 id="2019-1">2019</h4>
